Fix layout bug

--- a/frontend/src/components/parts/Dropdown/Dropdown.module.css
+++ b/frontend/src/components/parts/Dropdown/Dropdown.module.css
@@ -14,6 +14,7 @@
   background-color: var(--grey4);
   border-radius: 0 .5rem .5rem .5rem;
   box-shadow: 0px 4px 12px rgba(255, 255, 255, 0.1);
+  z-index: 1;
 }
 
 .options li {
